# finetrainers-ui

./: LICENSE  README.md  app.py  config.py  editor_factory.py  pyproject.toml  requirements.txt  run_trainer.py  runner.py  tab.py  trainer_config_validator.py
.github/workflows/: python-app.yml
config/: config_categories.yaml  config_template.yaml  config_template_legacy.yaml  editor.yaml  prepare_template.yaml  runtime_config.yaml
scripts/: common_io.py  rename_keys.py
tabs/: general_tab.py  prepare_tab.py  tab.py  tool_tab.py  training_tab.py  training_tab_legacy.py
test/: test_trainer_config_validator.py
