[project]
name = "finetrainers-ui"
version = "0.13.0"
dependencies = [
    "gradio",
    "torch>=2.5.1"
]
description = "A gradio based ui for training video transformer models with finetrainers as backend"
readme = "README.md"
license = {file = "LICENSE"}


[project.urls]
Repository = "https://github.com/neph1/finetrainers-ui"

[tool.setuptools]
packages = ["tabs", "config"]